# eu-tenders

./: .gitignore  CLAUDE.md  SCHEMA.md  compose.yml  docker-compose.yml  pyproject.toml  schema.sql
.claude/agents/: contract-analyzer.md
docs/: es_gencat.md  es_place.md  fr_boamp.md  fr_decp.md  pt_base.md  ted_top20_water_q1_2026.md
queries/: adjudicatarios_by_tipo_contrato.sql  company_group_by_year_tipo.sql  concessions_spain.sql  concessions_spain_cat.sql  desal_plants_current_operators.sql  desalination_spain.sql  desalination_spain_cat.sql  networks_spain.sql  networks_spain_cat.sql  pipe_replacement_tenders.sql  search_by_adjudicatario.sql  water_resilience_spain_cat.sql  water_wastewater_tenders.sql  wwtp_retrofit_obras.sql  wwtps_spain.sql  wwtps_spain_cat.sql
schema/: postgres.sql
schema/bigquery/: assets.sql  tenders.sql
schema/postgres/: assets.sql
scripts/: import_catalunya.py  import_spain.py
source/: es_concessions_enrich.py  es_gencat.py  es_place.py  fr_boamp.py  fr_decp.py  fr_sispea.py  gencat.py  place.py  pt_base.py  ted_water_q1.py
